# py-euroleague

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
examples/: async_example.py  basic_usage.py  fantasy_basketball.py  game_analysis.py  play_by_play_analysis.py  player_analysis.py  player_game_logs.py  shot_chart_analysis.py  team_analysis.py
src/euroleague/: __init__.py  _version.py  auth.py  client.py  exceptions.py  http.py
src/euroleague/api/: __init__.py  base.py
src/euroleague/api/live/: __init__.py  play_by_play.py  shots.py
src/euroleague/api/v1/: __init__.py  games.py  players.py  results.py  schedules.py  standings.py  teams.py
src/euroleague/api/v2/: __init__.py  clubs.py  competitions.py  games.py  groups.py  people.py  phases.py  records.py  referees.py  rounds.py  season_clubs.py  season_people.py  seasons.py  standings.py  stats.py
src/euroleague/api/v3/: __init__.py  clubs.py  coaches.py  games.py  player_stats.py  standings.py  stats.py  team_stats.py
src/euroleague/models/: __init__.py  base.py  common.py
src/euroleague/models/live/: __init__.py  play_by_play.py  shots.py
src/euroleague/models/v1/: __init__.py
src/euroleague/models/v2/: __init__.py
src/euroleague/models/v3/: __init__.py
src/euroleague/utils/: __init__.py  constants.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_api.py  test_auth.py  test_client.py  test_exceptions.py  test_http.py  test_parity.py  test_play_by_play.py  test_shots.py
