[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py-euroleague"
version = "0.1.0"
description = "Python wrapper for the Euroleague Basketball API"
readme = "README.md"
license = "MIT"
authors = ["sfendourakis <sfendourakispan@gmail.com>"]
keywords = ["euroleague", "basketball", "api", "sports", "eurocup", "eurobasket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "euroleague", from = "src" }]

[tool.poetry.urls]
Homepage = "https://github.com/sfendourakis/py-euroleague"
Repository = "https://github.com/sfendourakis/py-euroleague"
Issues = "https://github.com/sfendourakis/py-euroleague/issues"
Changelog = "https://github.com/sfendourakis/py-euroleague/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.10"
httpx = ">=0.27.0"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
mypy = ">=1.8.0"
ruff = ">=0.3.0"
pre-commit = "^4.5.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
